# telestack-realtime-db-FYP

./: .dev.vars  LICENSE  QUICK_REFERENCE.md  api-keys.sql  audit_report.txt  audit_results.md  backup.sql  batch_verify.js  benchmark.js  benchmark.ps1  benchmark.ts  benchmark_cloud.js  benchmark_latency.js  benchmark_results.json  check_token.js  cleanup_d1.js  comparative_benchmark.js  comprehensive_performance_audit.js  d1.json  d1_list.txt  dashboard.html  dashboard_research.html  debug_output.txt  existing_infra_audit.js  fresh_client_verify.js  fyp_thesis_blueprint.md  hyper_speed_proof.js  indexes.sql  init-api-keys.js  init-api-keys.sql  init-db.js  migration_add_d1_id.sql  package-lock.json  package.json  platform_verify.js  realtimedb_achievements.md  research_invention_AENS.md  research_paper_comprehensive.md  reset_d1_api.js  schema.sql  (+7 more)
demo/paint/: app.js  index.html  style.css
docs/: AENS_ALGORITHM.md  ARCHITECTURE_OVERVIEW.md  BASELINE_COMPARISON.md  PERFORMANCE_BENCHMARKS.md  PREDICTIVE_CACHE.md  PROJECT_REPORT_FINAL.md  README.md  RESEARCH_BENCHMARK_REPORT.md  SECURITY_ENGINE.md  TECHNICAL_MANIFESTO.md  VISUAL_ARCH_GALLERY.md
docs/assets/: ieee.tex  viva.tex
src/: api-key.ts  cache.ts  d1-gateway.ts  index.ts  security-engine.ts  shadow-worker.ts  types.ts  write-buffer.ts
test-suite/: 01-distributed-stress.js  02-single-document-contention.js  03-cloud-comparison.js  04-comprehensive-audit.js  05-contention-scaling.js  06-write-amplification.js  README.md  README_v2.md
wasm-engine/: Cargo.toml
wasm-engine/src/: lib.rs
(+26 files in other folders)
