[package]
name = "wasm-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh32"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Used for parsing and manipulating JSON recursively in CRDT
